Fix up some bits FindBugs found
svn path=/trunk/; revision=23